syntax = "proto3";

option java_multiple_files = true;
option java_package = "protos";

package protos;

service TodoService {
    rpc createTodo (createTodoRequest) returns (Todo);
    rpc deleteTodo (deleteTodoRequest) returns (deleteTodoResponse);
    rpc listTodos (listTodosRequest) returns (listTodosResponse);
}

//Objects
message Todo {
    string id = 1;
    string description = 2;
}


message createTodoRequest {
    string description = 1;
}

message deleteTodoRequest {
    string id = 1;
}
message deleteTodoResponse {

}

message listTodosRequest {

}
message listTodosResponse {
    repeated Todo todos = 1;
}